# api-gateway/docs/swagger.json
@@ -27,12 +27,6 @@
                 "summary": "Get all posts",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Username to filter posts",
-                        "name": "username",
-                        "in": "query"
-                    },
-                    {
                         "type": "integer",
                         "default": 1,
                         "description": "Page number",
